# IFF-depressao

./: .gitignore  IFF-depressao.cabal  README.md  buildexe.sh  buildsite.sh  index.html  package-lock.json  package.json  site.hs  tailwind.config.js
css/: input.css  style.css
docs/: about.html  archive.html  contact.html  index.html  rss.xml
docs/css/: input.css  style.css
docs/posts/: 2024-01-29-fasm.html  2024-08-06-c-moderno.html  2024-08-06-ola.html  2024-08-06-testes.html  2024-08-07-matricula.html  2024-08-07-tecnico.html  2024-11-04-testes.html  2024-11-19-c1.html  2024-11-24-c-moderno.html  2024-11-26-von-newmann.html  2025-01-06-isas.html  2025-01-29-fasm.html  2025-02-01-logica-condicional.html
posts/: 2024-08-06-ola.markdown  2024-08-07-matricula.markdown  2024-08-07-tecnico.markdown  2024-11-19-c1.markdown  2024-11-24-c-moderno.markdown  2024-11-26-von-newmann.markdown  2025-01-06-isas.markdown  2025-01-29-fasm.markdown  2025-02-01-logica-condicional.markdown
templates/: archive.html  contact.html  default.html  post-list.html  post.html
