name:               IFF-depressao
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base        >= 4.16 && < 5
                  , hakyll      == 4.15.*
                  , pandoc      == 2.19.2
  ghc-options:      -threaded
  default-language: Haskell2010
